# latex

./: .gitignore  .replit  README.md  init.py  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: main.yml
blog/: 2020-Fall-Intro-to-computer-programming.html  archives.html  authors.html  categories.html  index.html  search.html  sitemap.xml  tags.html  tipuesearch_content.js  tipuesearch_content.json
blog/author/: yen.html
blog/category/: misc.html
blog/feeds/: all.atom.xml  misc.atom.xml
blog/pages/about/: index.html
blog/tag/: 2020fallcp.html
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  Packages.html  Replit.html  amsfonts.html  amsmath.html  enumerate.html  fontawesome5.html  geometry.html  graphicx.html  hyperref.html  index.html  setspace.html  sitemap.html  textpos.html  tipuesearch_content.js  titlesec.html  type1cm.html
latex/: project_report.tex  project_report_linux.tex
latex/ThinkPython2/book/: book.tex
markdown/: 20200813.md
markdown/pages/: pages_1.md
